--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -61,6 +61,66 @@ on early-init
     # Load WIGIG platform driver
     # exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules msm_11ad_proxy
 
+on property:sys.boot_completed=1
+
+# Other tune
+    write /proc/sys/kernel/panic_on_oops 0
+    write /proc/sys/vm/panic_on_oom 0
+    write /proc/sys/vm/drop_caches 3
+    write /proc/sys/kernel/hung_task_timeout_secs 0
+    write /proc/cpu/alignment 4
+    write /sys/module/alarm_dev/parameters/debug_mask 0
+    write /sys/module/alarmtimer/parameters/debug_mask 0
+    write /sys/module/binder/parameters/debug_mask 0
+    write /sys/module/earlysuspend/parameters/debug_mask 0
+    write /sys/module/sbsuspend/parameters/sbsuspend_debug_mask 0
+    write /sys/module/snd/parameters/debug 0
+    write /sys/module/pvrsrvkm/parameters/gPVRDebugLevel 0
+    write /sys/module/musb_hdrc/parameters/debug_level 0
+    write /sys/module/lowmemorykiller/parameters/debug_level 0
+    write /proc/sys/net/ipv6/conf/wlan0/disable_ipv6 0
+    stop batterywarning
+    stop emsvr_user
+    write /proc/sys/vm/stat_interval 10
+    write /proc/sys/net/ipv4/tcp_ecn 1
+    write /proc/sys/net/ipv4/tcp_fastopen 3
+    write /proc/sys/net/ipv4/tcp_syncookies 0
+    write /proc/sys/kernel/printk_devkmsg off
+    write /proc/sys/kernel/perf_cpu_time_max_percent 5
+    write /proc/sys/kernel/sched_walt_init_task_load_pct 10
+    write /proc/sys/kernel/randomize_va_space 2
+
+# Disable logging
+    setprop dalvik.vm.checkjini false
+    setprop ro.kernel.android.checkjni 0
+    setprop ro.kernel.checkjni 0
+    setprop ro.config.nocheckin 1
+    setprop debug.systemui.latency_tracking 0
+    setprop persist.sample.eyetracking.log 0
+    setprop ro.com.google.locationfeatures 0
+    setprop ro.com.google.networklocation 0
+    setprop media.metrics.enabled 0
+    setprop sys.debug.watchdog 0
+    setprop media.metrics 0
+    setprop config.stats 0
+    setprop persist.traced.enable 0
+    setprop persist.sample.eyetracking.log 0
+    setprop debug.atrace.tags.enableflags 0
+    setprop debugtool.anrhistory 0
+    setprop ro.debuggable 1
+    setprop profiler.debugmonitor false
+    setprop profiler.launch false
+    setprop profiler.hung.dumpdobugreport false
+    setprop debug.atrace.tags.enableflags 0
+    setprop pm.sleep_mode 1
+    setprop profiler.force_disable_ulog true
+    setprop profiler.force_disable_ulog 1
+    setprop profiler.force_disable_err_rpt true
+    setprop profiler.force_disable_err_rpt 1
+    setprop debug.atrace.tags.enableflags 0
+    setprop persist.service.pcsync.enable 0
+    setprop persist.service.lgospd.enable 0
+
 on init
 
     # Support legacy paths
