sm8250-common: wifi: Enable QPower and Deep sleep at the same time

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -136,6 +136,7 @@ gRrmEnable=1
 
 #Enable Optimized Power Management
 gOptimizedPowerManagement=1
+gEnablePowerSaveOffload=4
 
 # Firmware log mode
 # Valid values are 0,1,2
